--- a/css/main.css
+++ b/css/main.css
@@ -24,7 +24,7 @@
 
 /* main class */
 .bg-img {
-    background-image: url(../img/prayerImg.webp);
+    background-image: url(../img/pexels-pat-whelen-5615784.jpg);
     width: 100%;
    height: 100vh;
     background-position: center;
