--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,7 @@
 .bg-img {
     background-image: url(../img/pexels-pat-whelen-5615784.jpg);
     width: 100%;
-   height: 100vh;
+  
     background-position: center;
     background-size: cover;
     color: white; 
@@ -142,7 +142,7 @@ border-radius: 10px;
 /* form */
 form{
     margin-top: 100px;
-
+padding-bottom: 147px;
    
 }
 form input{
