--- a/css/main.css
+++ b/css/main.css
@@ -5,20 +5,13 @@
     margin: 0;
     box-sizing: border-box;
 }
-
 :root {
     --main-color: rgba(0, 0, 0, 0.336);
     --second-color: teal;
 }
-
 .container {
     width: 85%;
 }
-
-
-
-
-
 /* global */
 
 
@@ -98,7 +91,6 @@
 
 
 /* prayer-cards */
-
 #prayer-cards img {
     width: 20%;
 }
@@ -142,12 +134,10 @@ border-radius: 10px;
 form{
     margin-top: 80px;
     padding-bottom: 100px;
-
   
 }
 form input{
    width: 40% !important;
-  
 }
 .form-control {
     color: white;
@@ -177,6 +167,7 @@ form input{
 /* form */
 
 
+/* media */
 @media (min-width: 0px) and (max-width: 760px) {
     .container {
         width: 97% !important;
@@ -186,7 +177,6 @@ form input{
      }
   
 }
-
 @media (min-width: 600px) and (max-width: 1300px) {
     .container {
         width: 90% !important;
@@ -195,9 +185,10 @@ form input{
 @media (min-width: 1290px) and (max-width: 2500px) {
     .bg-img {
         height: 100vh;
-    }
-    
+    }  
 }
+/* media */
+
 
 
 
